ChangeLog for package moot

v2.0.14 Thu, 10 Nov 2016 10:00:46 +0100 moocow
	+ debugging crashes on kira (ubuntu 16.04.1 LTS / g++ 5.4.0-6ubuntu1~16.04.2 5.4.0 20160609 / deb 4:5.3.1-1ubuntu1)
	  - bizarre "double free or corruption" errors, segfaults, and other strangeness on grenzboten, dta sources
	  - only occurs when compiled with default gcc-5 (using package g++-4.9 for now)
	  - merged svn+ssh://moocow@odo.dwds.de/home/svn/dev/moot/branches/moot-2.0.13-1+ubuntu-16-crash-debug -r 16689:16690 into trunk
	+ fixed some gcc warnings (unused variables, size_t printf formats, suggested parentheses)

v2.0.13 Fri, 19 Sep 2014 16:58:57 +0200 kmw
	+ wasteScannerScan.re.skel: Changed definitions of SPACE
          to use unicode property 'Z'

v2.0.12 Fri, 15 Aug 2014 13:20:51 +0200 kmw
	+ [r12621] added abbreviation lookup for roman numerals, fixes mantis bug #657

v2.0.11 Tue, 08 Jul 2014 11:29:11 +0200 moocow
	+ fixed trellis-explosion bug on multiple fallbacks
	+ decomposed 'trace' i/o-format flag into 'trace' and 'predict'
	+ added i/o format flag 'flush' for auto-flush (native output only)

v2.0.10 Wed, 04 Dec 2013 14:28:31 +0100 moocow and kmw
	+ added "waste" tokenizer support classes and command-line utility
	  * merged into moot sources from dwds_tomasotath v0.5.x
	+ added perl support for TokenReader/TokenWriter classes
	  * still missing: pure-perl Token(Reader|Writer) subclassing
	+ improved hint and comment passing in TokenIO
	  * tokenizer hints "$WB$", "$SB$" are now passed through as pseudo-comments
	+ TokenReaderNative no longer trims intial or final token whitespace
	+ Token(Reader|Writer)Native format change: location is now BEFORE 'besttag'
	  * this corresponds to formats used by dwds_tomasotath and DTA::CAB, but
	    is not actually what Token(Reader|Writer)Native had been using
	  * change makes no difference for 'rare' or 'medium-rare' formats
	+ added wasteAnnotator as drop-in replacement for dwds_tomasotath-style tokenizer-side analysis