@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "MOOTEVAL 1"
-.TH MOOTEVAL 1 "2016-11-10" "moot v2.0.14-1" "moot PoS Tagger"
+.TH MOOTEVAL 1 "2016-11-18" "moot v2.0.14-1" "moot PoS Tagger"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
