@@ -69,7 +69,7 @@
 <dt id="mootdyn">mootdyn</dt>
 <dd>
 
-<p>moocow&#39;s dynamic HMM part-of-speech tagger/disambiguator. (<a>mootdyn</a>)</p>
+<p>moocow&#39;s dynamic HMM part-of-speech tagger/disambiguator. (<a href="./mootdyn.html">mootdyn</a>)</p>
 
 </dd>
 <dt id="mooteval">mooteval</dt>
@@ -93,13 +93,13 @@
 <dt id="moottaste">moottaste</dt>
 <dd>
 
-<p>moocow&#39;s HMM part-of-speech tagger: heuristic token classifier. (<a>moottaste</a>)</p>
+<p>moocow&#39;s HMM part-of-speech tagger: heuristic token classifier. (<a href="./moottaste.html">moottaste</a>)</p>
 
 </dd>
 <dt id="waste">waste</dt>
 <dd>
 
-<p>Word- and Sentence-Token Extractor using a Hidden Markov Model (<a>waste</a>)</p>
+<p>Word- and Sentence-Token Extractor using a Hidden Markov Model (<a href="./waste.html">waste</a>)</p>
 
 </dd>
 <dt id="mootfiles">mootfiles</dt>
